Bug 84258 - Impress and Draw sharing code causing problems with icons and menus
Summary: Impress and Draw sharing code causing problems with icons and menus
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks: ImpressDraw-Toolbars SD-Shared-Code
  Show dependency treegraph
 
Reported: 2014-09-23 21:51 UTC by Yousuf Philips (jay) (retired)
Modified: 2023-06-29 01:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-09-23 21:51:21 UTC
As Impress and Draw share the same code base, they both utilize uno commands like .uno:InsertPage and .uno:DeletePage which have the same icon in both apps, which is a problem as the default icon looks like a page and in impress it should look like a slide.

This problem also happens in menus and context menus as Draw has Insert > Slide (bug 84208) and Impress has Format > Page (bug 84257).
Comment 1 Samuel Mehrbrodt 2014-09-23 21:55:16 UTC
The add/delete icons have been changed to look like slides with this commit: https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;h=d6aaff5d56c3273595218e7fba803c52e3ba9c46

This needs to be revisited (Draw needs page icons).
Comment 2 Yousuf Philips (jay) (retired) 2014-11-14 09:49:59 UTC
The uno commands that need duplication are these

.uno:InsertPage
.uno:DuplicatePage
.uno:DeletePage
.uno:PageSetup
.uno:RenamePage

so the new ones should be named like InsertSlide.
Comment 3 Yousuf Philips (jay) (retired) 2014-11-23 08:01:23 UTC
There is also a problem with the statusbar as it uses 'Slide 1 / 1' in Draw rather than Page.
Comment 4 Yousuf Philips (jay) (retired) 2014-12-22 14:39:22 UTC
Another problem is that the dialog that appears from .uno:RenamePage is titled 'Rename Slide' and the name is set to 'Slide 1' and these dont work for Draw.
Comment 5 QA Administrators 2016-01-17 20:02:54 UTC Comment hidden (obsolete)
Comment 6 Maxim Monastirsky 2016-02-23 12:25:35 UTC
I'm currently testing some solution in my local build, that will allow having different icons/labels (currently for menus, later can be adapted for toolbars). (Other issues like status bar and dialogs should have separate bugs anyway, as there is no way to fix them together.)
Comment 7 Commit Notification 2016-02-28 07:14:31 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=010b034cd6195c96a21633c328e9693275d27d72

tdf#84258 Allow creation of command aliases

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-02-28 07:14:34 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=223b07bb52823eb50b85d283572cb543378afbd1

tdf#84258 officecfg: Split page/slide commands

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-04-12 23:23:11 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f27cc992a99568e46ffe807ef9dbb5ba0bc601f

tdf#84258 Link icons and use new commands in menu/toolbars

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Adolfo Jayme Barrientos 2016-07-13 01:10:57 UTC
*** Bug 100848 has been marked as a duplicate of this bug. ***