tdf#84258 Allow creation of command aliases

We already can use different labels for commands, based on
whether they're in a menu, context menu or a toolbar. But in
some cases we need different labels for the same type of UI
element, or even different icons.

One example is page/slide commands in Draw/Impress, as they
share same commands, but need different icons/labels.
Creating full-fledged duplicate slots just to satisfy the
need of UI representation seems like overkill, and isn't
flexible enough.

The proposed solution is to allow creation of command entries,
that do not correspond to real application slots, but instead
link to another existing commands. The "real" commands will be
used for controller factory and dispatch (execute/status) APIs,
thus fully retaining functionality.

This can be useful also for giving icons to complex commands
(i.e. commands with arguments).

Change-Id: I9b261b406ec8fc781cae06cf283963386379d4ad