framework/source/uielement/uicommanddescription.cxx
@@ -55,6 +55,7 @@ static const char CONFIGURATION_PROPERTY_LABEL[]        = "Label";
 static const char CONFIGURATION_PROPERTY_CONTEXT_LABEL[] = "ContextLabel";
 static const char CONFIGURATION_PROPERTY_POPUP_LABEL[]   = "PopupLabel";
 static const char CONFIGURATION_PROPERTY_TOOLTIP_LABEL[] = "TooltipLabel";
+static const char CONFIGURATION_PROPERTY_TARGET_URL[]    = "TargetURL";
 
 // Property names of the resulting Property Set
 static const char PROPSET_LABEL[]                       = "Label";
@@ -62,6 +63,7 @@ static const char PROPSET_NAME[]                        = "Name";
 static const char PROPSET_POPUP[]                       = "Popup";
 static const char PROPSET_POPUPLABEL[]                  = "PopupLabel";
 static const char PROPSET_TOOLTIPLABEL[]                = "TooltipLabel";
+static const char PROPSET_TARGETURL[]                   = "TargetURL";
 static const char PROPSET_PROPERTIES[]                  = "Properties";
 
 // Special resource URLs to retrieve additional information
@@ -123,6 +125,7 @@ class ConfigurationAccess_UICommand : // Order is necessary for right initializa
             OUString            aCommandName;
             OUString            aPopupLabel;
             OUString            aTooltipLabel;
+            OUString            aTargetURL;
             bool                bPopup : 1,
                                 bCommandNameCreated : 1;
             sal_Int32           nProperties;
@@ -153,11 +156,13 @@ class ConfigurationAccess_UICommand : // Order is necessary for right initializa
         OUString                     m_aPropUIContextLabel;
         OUString                     m_aPropUIPopupLabel;
         OUString                     m_aPropUITooltipLabel;
+        OUString                     m_aPropUITargetURL;
         OUString                     m_aPropLabel;
         OUString                     m_aPropName;
         OUString                     m_aPropPopup;
         OUString                     m_aPropPopupLabel;
         OUString                     m_aPropTooltipLabel;
+        OUString                     m_aPropTargetURL;
         OUString                     m_aPropProperties;
         OUString                     m_aPrivateResourceURL;
         Reference< XNameAccess >          m_xGenericUICommands;
@@ -184,11 +189,13 @@ ConfigurationAccess_UICommand::ConfigurationAccess_UICommand( const OUString& aM
     m_aPropUIContextLabel( CONFIGURATION_PROPERTY_CONTEXT_LABEL ),
     m_aPropUIPopupLabel( CONFIGURATION_PROPERTY_POPUP_LABEL ),
     m_aPropUITooltipLabel( CONFIGURATION_PROPERTY_TOOLTIP_LABEL ),
+    m_aPropUITargetURL( CONFIGURATION_PROPERTY_TARGET_URL ),
     m_aPropLabel( PROPSET_LABEL ),
     m_aPropName( PROPSET_NAME ),
     m_aPropPopup( PROPSET_POPUP ),
     m_aPropPopupLabel( PROPSET_POPUPLABEL ),
     m_aPropTooltipLabel( PROPSET_TOOLTIPLABEL ),
+    m_aPropTargetURL( PROPSET_TARGETURL ),
     m_aPropProperties( PROPSET_PROPERTIES ),
     m_aPrivateResourceURL( PRIVATE_RESOURCE_URL ),
     m_xGenericUICommands( rGenericUICommands ),
@@ -307,7 +314,7 @@ Any ConfigurationAccess_UICommand::getSequenceFromCache( const OUString& aComman
         if ( !pIter->second.bCommandNameCreated )
             fillInfoFromResult( pIter->second, pIter->second.aLabel );
 
-        Sequence< PropertyValue > aPropSeq( 6 );
+        Sequence< PropertyValue > aPropSeq( 7 );
         aPropSeq[0].Name  = m_aPropLabel;
         aPropSeq[0].Value = !pIter->second.aContextLabel.isEmpty() ?
                 makeAny( pIter->second.aContextLabel ): makeAny( pIter->second.aLabel );
@@ -321,6 +328,8 @@ Any ConfigurationAccess_UICommand::getSequenceFromCache( const OUString& aComman
         aPropSeq[4].Value <<= pIter->second.aPopupLabel;
         aPropSeq[5].Name  = m_aPropTooltipLabel;
         aPropSeq[5].Value <<= pIter->second.aTooltipLabel;
+        aPropSeq[6].Name  = m_aPropTargetURL;
+        aPropSeq[6].Value <<= pIter->second.aTargetURL;
         return makeAny( aPropSeq );
     }
 
@@ -349,6 +358,7 @@ void ConfigurationAccess_UICommand::impl_fill(const Reference< XNameAccess >& _x
                     xNameAccess->getByName( m_aPropUIContextLabel ) >>= aCmdToInfo.aContextLabel;
                     xNameAccess->getByName( m_aPropUIPopupLabel )   >>= aCmdToInfo.aPopupLabel;
                     xNameAccess->getByName( m_aPropUITooltipLabel )   >>= aCmdToInfo.aTooltipLabel;
+                    xNameAccess->getByName( m_aPropUITargetURL )    >>= aCmdToInfo.aTargetURL;
                     xNameAccess->getByName( m_aPropProperties )     >>= aCmdToInfo.nProperties;
 
                     m_aCmdInfoCache.insert( CommandToInfoCache::value_type( aNameSeq[i], aCmdToInfo ));
